--- a/#1/ports.html
+++ b/#1/ports.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>index</title>
+    <title>ports</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,58 +10,56 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <div class="conteiner-fluid m-2 border border-secondary bg-gray">
-            <div class="row m-1">
-                <div class="col-md-12">
-                    <div class="text-white text-center bg-primary">Доп. информация по свичу</div>
-                    <div class="border border-info">
-                        <table class="table m-0 p-0">
-                            <tbody>
-                                <tr>
-                                    <th>Описание:</th>
-                                    <td>DES-3200-26/C1 Fast Ethernet Switch</td>
-                                </tr>
-                                <tr>
-                                    <th>Положение:</th>
-                                    <td>Lesnoy_20_1par_2</td>
-                                </tr>
-                                <tr>
-                                    <th>Прошивка:</th>
-                                    <td>4.37.B013</td>
-                                </tr>
-                                <tr>
-                                    <th>Ревизия:</th>
-                                    <td>C1</td>
-                                </tr>
-                                <tr>
-                                    <th>IP:</th>
-                                    <td>10.11.71.93</td>
-                                </tr>
-                                <tr>
-                                    <th>MAC:</th>
-                                    <td>90:94:e4:20:35:80</td>
-                                </tr>
-                                <tr>
-                                    <th>hiVlan:</th>
-                                    <td>3768</td>
-                                </tr>
-                                <tr>
-                                    <th>loVlan:</th>
-                                    <td>3100</td>
-                                </tr>
-                                <tr>
-                                    <th>Адрес:</th>
-                                    <td>
-                                        пр. Лесной 20 под. 1
-                                        <br>
-                                        <span class="text-muted small">свич №1</span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+        <div class="container-fluid m-2 border border-secondary">
+            <div class="container-fluid">
+
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-12 text-white text-center bg-primary">
+                            Доп. информация по свичу
                     </div>
-                    <button class="btn-warning btn-sm btn-block p-0 rounded-0  text-primary">Редактировать свитч</button>
-                </div>     
+                </div>
+
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">Описание:</div>
+                    <div class="col-md-8 col-sm-12 border">DES-3200-26/C1 Fast Ethernet Switch</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">Положение:</div>
+                    <div class="col-md-8 col-sm-12 border">Lesnoy_20_1par_2</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">Прошивка:</div>
+                    <div class="col-md-8 col-sm-12 border">4.37.B013</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">Ревизия:</div>
+                    <div class="col-md-8 col-sm-12 border">C1</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">IP:</div>
+                    <div class="col-md-8 col-sm-12 border">10.11.71.93</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">MAC:</div>
+                    <div class="col-md-8 col-sm-12 border">90:94:e4:20:35:80</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">hiVlan:</div>
+                    <div class="col-md-8 col-sm-12 border">3768</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">loVlan:</div>
+                    <div class="col-md-8 col-sm-12 border">3100</div>
+                </div>
+                <div class="row ml-1 mr-1">
+                    <div class="col-md-4 col-sm-12 border font-weight-bold">Адрес:</div>
+                    <div class="col-md-8 col-sm-12 border">
+                        пр. Лесной 20 под. 1
+                        <br>
+                        <span class="text-muted small">свич №1</span>
+                    </div>
+                </div>
+                <button class="btn-warning btn-sm btn-block p-0 rounded-0  text-primary">Редактировать свитч</button>
             </div>
 
             <div class="row m-1">
@@ -507,7 +505,7 @@
                     <!--  -->
                 </div>
             </div>
-      </div>
+        </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
